<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_enter_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:text="@string/tv_enter_location"
        app:layout_constraintBottom_toBottomOf="@+id/et_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_location" />

    <EditText
        android:id="@+id/et_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tv_enter_location"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_get_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_get_forecast"
        app:layout_constraintEnd_toEndOf="@+id/et_location"
        app:layout_constraintStart_toStartOf="@+id/et_location"
        app:layout_constraintTop_toBottomOf="@+id/et_location" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="350dp"
        android:layout_height="67dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_get_forecast">

        <TextView
            android:id="@+id/tv_location_forecast"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textColor="#9C27B0"
            android:textSize="24sp"
            tools:text="@string/tv_location_forecast" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="350dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1">

        <TextView
            android:id="@+id/tv_for"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tv_for"
            tools:text="@string/tv_for" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="191dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/tv_date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="350dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll2">

        <TextView
            android:id="@+id/tv_max_temp_lbl"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tv_max_temp_lbl"
            tools:text="@string/tv_max_temp_lbl" />

        <TextView
            android:id="@+id/tv_max_temp_val"
            android:layout_width="148dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tv_max_temp_val"
            tools:text="@string/tv_max_temp_val" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="350dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll3">

        <TextView
            android:id="@+id/tv_min_temp_lbl"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tv_min_temp_lbl"
            tools:text="@string/tv_min_temp_lbl" />

        <TextView
            android:id="@+id/tv_min_temp_val"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tv_min_temp_val"
            tools:text="@string/tv_min_temp_val" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll5"
        android:layout_width="350dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll4">

        <TextView
            android:id="@+id/tv_will_be_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tv_will_be_text"
            tools:text="@string/tv_will_be_text" />

        <TextView
            android:id="@+id/tv_weather_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/tv_weather_text" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/chk_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="16dp"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/tv_bookmark"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/ll1"
        app:layout_constraintEnd_toStartOf="@+id/btn_get_forecast"
        tools:text="@string/tv_bookmark" />

    <LinearLayout
        android:id="@+id/ll6"
        android:layout_width="350dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll5">

        <TextView
            android:id="@+id/tv_future_lbl"
            android:layout_width="530dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_future_lbl"
            tools:text="@string/tv_future_lbl" />

        <Spinner
            android:id="@+id/sp_number_of_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/spinner_items"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>